<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.crazypig.test</groupId>
	<artifactId>TestMyCatErr1156</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>TestMyCatErr1156</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mysql.version>5.1.31</mysql.version>
		<druid.version>1.0.26</druid.version>
		<spring.version>4.3.14.RELEASE</spring.version>
		<slf4j.version>1.7.21</slf4j.version>
		<log4j.version>1.2.17</log4j.version>
	</properties>

	<dependencies>
	
		<!-- spring -->
		<dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>

		<!-- mysql jdbc -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.version}</version>
		</dependency>
		
		<!-- druid -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>${druid.version}</version>
        </dependency>

		<!-- log -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>


			<!-- 生成shell脚本,控制程序启动和关闭 -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.7</version>
				<configuration>
					<configurationDirectory>conf</configurationDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<repositoryLayout>flat</repositoryLayout>
					<useWildcardClassPath>true</useWildcardClassPath>
					<daemons>
						<daemon>
							<id>${name}</id>
							<mainClass>com.crazypig.test.TestMyCatErr1156</mainClass>
							<commandLineArguments>
								<commandLineArgument>start</commandLineArgument>
							</commandLineArguments>
							<platforms>
								<platform>jsw</platform>
							</platforms>
							<jvmSettings>
								<!-- 启动内存配置 -->
								<maxStackSize>128</maxStackSize>
								<systemProperties>
									<systemProperty>APP_HOME=.</systemProperty>
								</systemProperties>
								<extraArguments>
									<extraArgument>-server </extraArgument>
									<extraArgument>-XX:MaxPermSize=64M</extraArgument>
									<extraArgument>-XX:+AggressiveOpts</extraArgument>
									<extraArgument>-XX:MaxDirectMemorySize=32M</extraArgument>
									<extraArgument>-XX:+UseParallelGC</extraArgument>
									<!-- <extraArgument>-Xss512K</extraArgument> -->
									<!-- 远程JMX -->
									<extraArgument>-Dcom.sun.management.jmxremote</extraArgument>
									<extraArgument>-Dcom.sun.management.jmxremote.port=8999</extraArgument>
									<extraArgument>-Dcom.sun.management.jmxremote.authenticate=false
									</extraArgument>
									<extraArgument>-Dcom.sun.management.jmxremote.ssl=false
									</extraArgument>
									<extraArgument>-Xmx512M</extraArgument>
									<extraArgument>-Xms512M</extraArgument>
								</extraArguments>
							</jvmSettings>
							<generatorConfigurations>
								<generatorConfiguration>
									<generator>jsw</generator>
									<includes>
										<include>aix-ppc-32</include>
										<include>aix-ppc-64</include>
										<include>hpux-parisc-64</include>
										<include>linux-x86-32</include>
										<include>linux-x86-64</include>
										<include>linux-ppc-64</include>
										<include>macosx-ppc-32</include>
										<include>macosx-x86-universal-32</include>
										<include>macosx-universal-32</include>
										<include>macosx-universal-64</include>
										<include>solaris-sparc-32</include>
										<include>solaris-sparc-64</include>
										<include>solaris-x86-32</include>
										<include>windows-x86-32</include>
										<include>windows-x86-64</include>
									</includes>

									<configuration>
										<property>
											<name>configuration.directory.in.classpath.first</name>
											<value>conf</value>
										</property>
										<property>
											<name>wrapper.ping.timeout</name>
											<value>120</value>
										</property>
										<property>
											<name>set.default.REPO_DIR</name>
											<value>lib</value>
										</property>
										<property>
											<name>wrapper.logfile</name>
											<value>logs/wrapper.log</value>
										</property>
									</configuration>

								</generatorConfiguration>
							</generatorConfigurations>
						</daemon>

					</daemons>
				</configuration>
				<executions>
					<execution>
						<id>generate-jsw</id>
						<phase>package</phase>
						<goals>
							<goal>generate-daemons</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors> <!--描述文件路径 -->
								<descriptor>src/main/assembly/assembly.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
</project>